# agmh

./: .gitignore  CHANGELOG.md  README.md  config.example.toml  destinations.example.txt  pyproject.toml  targets.example.txt
src/anti_gh_ms_hysteria/: __init__.py  cli.py  config.py  git_ops.py  http.py  models.py  notifications.py  runner.py  state.py  tokens.py  ui.py  utils.py
src/anti_gh_ms_hysteria/destinations/: __init__.py  base.py  bitbucket.py  forgejo.py  gitlab.py  sourcehut.py
src/anti_gh_ms_hysteria/sources/: __init__.py  bitbucket.py  forgejo.py  github.py  gitlab.py  sourcehut.py
tests/: test_config_and_utils.py
