[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agmh"
version = "0.1.0"
description = "AGMH, a local GitHub backup and repository mirroring CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Unlicense" }
authors = [{ name = "root@haltman.io" }]
dependencies = []

[project.optional-dependencies]
tui = ["rich>=13.7"]

[project.scripts]
agmh = "anti_gh_ms_hysteria.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
